--- a/css/style.css
+++ b/css/style.css
@@ -459,6 +459,7 @@ pre {
   padding: 20px 10px;
   font-size: 14px;
   font-style: italic;
+  font-style: normal;
   line-height: 20px;
   letter-spacing: 1px;
   border-top: 1px solid #efefef;
